fixing the sweet alert animation misalignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     box-sizing: border-box;
-    overflow-x: hidden;   
-    
+        
     
 }
 
@@ -22,15 +21,7 @@
     
 } */
 
-.sweet-alert .icon {
-    width: 88px;
-    height: 88px;
-  }
-  
-  .sweet-alert .icon.success .placeholder {
-    width: 88px;
-    height: 88px;
-  }
+
 /*----------------------------------------------------Nav Bar-------------------------------------------*/
 
 .nav-section{
@@ -220,11 +211,12 @@
 }
 
 .element-3{
-    width: 1100px;
-    height: 1100px;
-    
-    left: 50%;
-    top: -290px;
+    width: 1600px;
+    height: 1600px;
+
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .element-3 img{
